flex output in css to center the display

--- a/main.css
+++ b/main.css
@@ -63,6 +63,9 @@ output {
    height: 10vw;
    position: relative;
    font-family: sans-serif;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
 .op {
